tests/posts/invalid/missing-date.markdown
Title: Missing date.

Tags: News, Slugs, PHP

Slug: missing-date

; Date: 2014-06-10 00:00:00

Body:

# Heading

Text.
